--- a/core.properties
+++ b/core.properties
@@ -14,6 +14,7 @@ dist.lib.dir=${dist.bin.staging.dir}/lib
 dist.bin.dir=${dist.bin.staging.dir}/bin
 dist.examples.dir=${dist.bin.staging.dir}/examples
 dist.cacheonix.jar=${dist.lib.dir}/cacheonix.jar
+dist.cacheonix.src=${dist.lib.dir}/cacheonix-src.jar
 dist.cacheonix-javadoc.zip=${dist.lib.dir}/cacheonix-javadoc.zip
 dist.cacheonix-agent.jar=${dist.lib.dir}/cacheonix-agent.jar
 dist.javadoc.annotations.dir=${dist.doc.dir}/cacheonix-annotations
