--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,55 @@
    </properties>
 
    <dependencies>
+      <dependency>
+         <groupId>org.cacheonix.impl.util.array</groupId>
+         <artifactId>sample</artifactId>
+         <version>1.0.3</version>
+         <scope>system</scope>
+         <systemPath>${project.basedir}/3rdparty/cacheonix-array-utils-1.0.3/cacheonix-array-utils-1.0.3.jar</systemPath>
+      </dependency>
+      <dependency>
+         <groupId>org.hibernate</groupId>
+         <artifactId>hibernate</artifactId>
+         <version>3.2.7.ga</version>
+      </dependency>
+      <dependency>
+         <groupId>javax.transaction</groupId>
+         <artifactId>jta</artifactId>
+         <version>1.1</version>
+      </dependency>
+      <dependency>
+         <groupId>javax.servlet</groupId>
+         <artifactId>servlet-api</artifactId>
+         <version>2.5</version>
+         <scope>provided</scope>
+      </dependency>
+      <dependency>
+         <groupId>com.ibatis</groupId>
+         <artifactId>ibatis2-sqlmap</artifactId>
+         <version>2.1.7.597</version>
+      </dependency>
+      <dependency>
+         <groupId>javax.jms</groupId>
+         <artifactId>jms-api</artifactId>
+         <version>1.1-rev-1</version>
+      </dependency>
+      <dependency>
+          <groupId>org.mybatis</groupId>
+          <artifactId>mybatis</artifactId>
+          <version>3.0.5</version>
+      </dependency>
+      <dependency>
+          <groupId>org.primefaces</groupId>
+          <artifactId>primefaces</artifactId>
+          <version>6.0</version>
+      </dependency>
+      <dependency>
+         <groupId>javax.mail</groupId>
+             <artifactId>mail</artifactId>
+             <version>1.4</version>
+      </dependency>
    </dependencies>
-
    <build>
 
       <!-- FIXME: simeshev@cacheonix.org - 2021-03-10 - Move src and test
