Fixed copying test resources.

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
             <directory>${project.basedir}/conf/jar</directory>
          </resource>
       </resources>
+      <testResources>
+         <testResource>
+            <directory>test/conf</directory>
+         </testResource>
+      </testResources>
 
       <pluginManagement>
       </pluginManagement>
