--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
          <artifactId>sample</artifactId>
          <version>1.0.3</version>
          <scope>system</scope>
-         <systemPath>${project.basedir}/3rdparty/cacheonix-array-utils-1.0.3/cacheonix-array-utils-1.0.3.jar</systemPath>
+         <systemPath>${pom.basedir}/3rdparty/cacheonix-array-utils-1.0.3/cacheonix-array-utils-1.0.3.jar</systemPath>
       </dependency>
       <dependency>
          <groupId>org.hibernate</groupId>
@@ -140,6 +140,7 @@
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
             <configuration>
                <threadCount>1</threadCount>
                <forkMode>always</forkMode>
