--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
    <properties>
 
+      <maven.compiler.useIncrementalCompilation>true</maven.compiler.useIncrementalCompilation>
       <maven.compiler.source>1.8</maven.compiler.source>
       <maven.compiler.target>1.8</maven.compiler.target>
 
