--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,7 @@
       </pluginManagement>
 
       <plugins>
+         <!-- Maven Enforcer -->
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-enforcer-plugin</artifactId>
