--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,10 @@
          <artifactId>hibernate</artifactId>
          <version>3.2.7.ga</version>
          <exclusions>
-         <exclusion>
-            <groupId>javax.transaction</groupId>
-            <artifactId>jta</artifactId>
-         </exclusion>
+            <exclusion>
+               <groupId>javax.transaction</groupId>
+               <artifactId>jta</artifactId>
+            </exclusion>
          </exclusions>
       </dependency>
       <dependency>
@@ -136,6 +136,7 @@
       </pluginManagement>
 
       <plugins>
+
          <!-- Maven Enforcer -->
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -157,11 +158,15 @@
                </execution>
             </executions>
          </plugin>
+
+         <!-- Compiler -->
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.8.1</version>
          </plugin>
+
+         <!-- Test -->
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
@@ -192,6 +197,20 @@
                      <!--                     <value>${test.temp.dir}</value>-->
                   </property>
                </systemProperties>
+            </configuration>
+         </plugin>
+
+
+         <!-- Jar -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+               <archive>
+                  <manifest>
+                     <mainClass>org.cacheonix.Version</mainClass>
+                  </manifest>
+               </archive>
             </configuration>
          </plugin>
 
